Add Links back and forth

--- a/cute.html
+++ b/cute.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <a href="index.html">Default Flex Page</a>
+
     <div class="color1">
         <div class="short"></div>
         <div class="long"></div>
