--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <a href="cute.html">Cute Design Page</a>
     <h1>Default values</h1>
     <div class="parent">
         <div class="child">
