--- a/cute.html
+++ b/cute.html
@@ -10,26 +10,26 @@
 
 <body>
     <a href="index.html">Default Flex Page</a>
-
+<!-- Replace the ?????? with the correct class name -->
     <div class="color1">
-        <div class="short"></div>
-        <div class="long"></div>
+        <div class="??????"></div>
+        <div class="??????"></div>
     </div>
     <div class="color2">
-        <div class="long"></div>
-        <div class="short"></div>
+        <div class="??????"></div>
+        <div class="??????"></div>
     </div>
     <div class="color3">
-        <div class="short"></div>
-        <div class="long"></div>
+        <div class="??????"></div>
+        <div class="??????"></div>
     </div>
     <div class="color4">
-        <div class="long"></div>
-        <div class="short"></div>
+        <div class="??????"></div>
+        <div class="??????"></div>
     </div>
     <div class="color5">
-        <div class="short"></div>
-        <div class="long"></div>
+        <div class="??????"></div>
+        <div class="??????"></div>
     </div>
 </body>
 
