--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <a href="flexwrap.html">Flex-Wrap</a>
+    <a href="flexdirection.html">Flex-Direction</a>
     <a href="cute.html">Cute Design Page</a>
 
-    
+
     <h1>Default values</h1>
     <div class="parent">
         <div class="child">
